--- a/firstpage.html
+++ b/firstpage.html
@@ -1,13 +1,16 @@
 <html>
     <head>
+
     <h1>My First Page</h1>
+
     </head>
+
         <body>
         <p>HTML,</p><p> an initialism of HyperText Markup Language, is the predominant markup language for Web pages. It provides a means to describe the structure of text-based information in a document - by denoting certain text as links, headings, paragraphs, lists, and so on - and to supplement that text with interactive forms, embedded images, and other objects. HTML is written in the form of tags, surrounded by angle brackets. HTML can also describe, to some degree, the appearance and semantics of a document, and can include embedded scripting language code (such as JavaScript) which can affect the behavior of Web browsers and other HTML processors.</p> 
 
         <p>Files and URLs containing HTML often have a .html or .htm filename extension.</p>
 
-        <p>"HTML" (2008, December 3). <i>In Wikipedia, the free encyclopedia.</i> Retrieved December 3, 2008, from http://en.wikipedia.org/wiki/HTML</p>
+        <p>"HTML" (2008, December 3). <i>In Wikipedia, the free encyclopedia.</i> Retrieved December 3, 2008, from <a href="http://en.wikipedia.org/wiki/HTML"> Wikipedia - HTML</a></p>
 
         <ul>
             <li> Timbuck too</li>
@@ -16,5 +19,37 @@
             <li>Know Where</li>
             <li>Sports</li>
         </ul>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Frog_cakes.jpg/432px-Frog_cakes.jpg" border="0" align="left" height="100" width="125" alt="Frog Cakes" />
+
+        <p>This is a paragraph about frog cakes.</p>
+
         </body>
+        <table>
+            <thead>
+              <tr>
+                <th>Date</th>
+                <th>Sales</th>
+                <th>Revenue</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1/1/2020</td>
+                <td>12</td>
+                <td>$900</td>
+              </tr>
+              <tr>
+                <td>2/1/2020</td>
+                <td>15</td>
+                <td>$1200</td>
+              </tr>
+            </tbody>
+            <tfooter>
+              <tr>
+                <td>Totals</td>
+                <td>27</td>
+                <td>$2100</td>
+              </tr>
+            </tfooter>
+          </table>
 </html>
