--- a/WebPage.html
+++ b/WebPage.html
@@ -5,10 +5,10 @@
 
     <title>My page title</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
-
+<h1 style = "background-color: red ;">Hello World</h1>
     <style>
       :root {
-        --base-font-color: rgb(131,148,150);
+        --base-fon t-color: rgb(131,148,150);
         --secondary-font-color: rgb(88,110,117);
         --emphasised-font: rgb(147,161,161);
 
