changed the background colour

--- a/WebPage.html
+++ b/WebPage.html
@@ -28,7 +28,7 @@
 
   </head>
 
-  <body>
+  <body style="background-color:powderblue;"></bodystyle>>
     <!-- Here is our main header that is used across all the pages of our website -->
 
     <header>
