--- a/WebPage.html
+++ b/WebPage.html
@@ -5,10 +5,10 @@
 
     <title>My page title</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
-<h1 style = "background-color: red ;">Hello World</h1>
+
     <style>
       :root {
-        --base-fon t-color: rgb(131,148,150);
+        --base-font-color: rgb(131,148,150);
         --secondary-font-color: rgb(88,110,117);
         --emphasised-font: rgb(147,161,161);
 
@@ -28,11 +28,11 @@
 
   </head>
 
-  <body style="background-color:powderblue;"></bodystyle>>
+  <body style="background-color:rgb(0,43,54); color:rgb(131,148,150);"></bodystyle>>
     <!-- Here is our main header that is used across all the pages of our website -->
 
-    <header>
-      <h1>Header</h1>
+    <header style="background-color: rgb(7,54,66);">
+          <h1>Header</h1>
     </header>
 
     <nav>
