--- a/WebPage.html
+++ b/WebPage.html
@@ -24,19 +24,35 @@
         --c-cyan: rgb(42,161,152);
         --c-green: rgb(133,153,0);
       }
+      
     </style>
 
   </head>
+<style>
+body{max-width: 800px;}
 
+</style>
   <body style="background-color:rgb(0,43,54); color:rgb(131,148,150);"></bodystyle>>
     <!-- Here is our main header that is used across all the pages of our website -->
 
-    <header style="background-color: rgb(7,54,66);">
+    <header style= "color:yellow; background-color: rgb(7, 54, 66);">
           <h1>Header</h1>
     </header>
+<style>
+nav ul li{
+  display: inline;
+  list-style-type: none;
+  width: 150px;
+  float:left;
+  color: white;
+}
+li a:hover{color: rgb(203, 75, 22);}
 
+</style>
     <nav>
-      <ul>
+    
+     <ul>
+      <ul >
         <li><a href="#">Home</a></li>
         <li><a href="#">Our team</a></li>
         <li><a href="#">Projects</a></li>
@@ -55,17 +71,18 @@
     <main>
 
       <!-- It contains an article -->
-      <article>
+      <article >
         <h2>Article heading</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
-
-        <h3>Subsection</h3>
+      <article style="border:3px solid cyan;">
+        <h3 >Subsection</h3>
 
         <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
 
         <p>Pelientesque auctor nisi id magna consequat sagittis. Curabitur dapibus, enim sit amet elit pharetra tincidunt feugiat nist imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros.</p>
-
+      </article>
+      <article style="border:3px solid cyan;" >
         <h3>Another subsection</h3>
 
         <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
